fixes smiley aligning

--- a/app/View/Themed/Paz/webroot/css/src/partials/_posting-content.scss
+++ b/app/View/Themed/Paz/webroot/css/src/partials/_posting-content.scss
@@ -23,8 +23,8 @@
   }
 
   .saito-smiley-image {
-    display: inherit;
     margin: inherit;
+    display: inline-block;
   }
 
 }
